--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -15,7 +15,7 @@ pipeline {
         stage('Checkout') {
             steps {
                 sh 'echo passed'
-            //git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
+            git branch: 'main', url: 'https://github.com/EziamaUgonna/kubernetes_deployment_project.git'
             }
         }
         stage('Create an EKS Cluster') {
@@ -35,8 +35,9 @@ pipeline {
             }
             stage('Static Code Analysis') {
                 environment {
-                SONAR_URL = "http://ec2-44-201-77-93.compute-1.amazonaws.com:9000"            }
+                SONAR_URL = 'http://ec2-44-201-77-93.compute-1.amazonaws.com:9000'            }
                 steps {
+                    /* groovylint-disable-next-line NestedBlockDepth */
                     withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
                     /* groovylint-disable-next-line LineLength */
                         sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
@@ -52,24 +53,27 @@ pipeline {
                 steps {
                     script {
                         environment {
-                            AWS_DEFAULT_REGION = "us-east-1"
+                            AWS_DEFAULT_REGION = 'us-east-1'
                          /* groovylint-disable-next-line LineLength */
                          /* groovylint-disable-next-line GStringExpressionWithinString, }           GStringExpressionWithinString */
                             sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
                     /* groovylint-disable-next-line NoDef, VariableTypeRequired */
                             def dockerImage = docker.image("${DOCKER_IMAGE}")
                     /* groovylint-disable-next-line NestedBlockDepth */
-                            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                            docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
                                 dockerImage.push()
                             }
                     }
                 }
             }
                 stage('Update Deployment File') {
-                    environment {
-                        GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
-                        GIT_USER_NAME = "iam-veeramalla"
+                    /* groovylint-disable-next-line NestedBlockDepth */
+                    environment { 
+                        GIT_REPO_NAME = 'kubernetes_deployment_project'
+                        GIT_USER_NAME = 'EziamaUgonna'
+
                     }
+                    /* groovylint-disable-next-line NestedBlockDepth */
                     steps {
                     /* groovylint-disable-next-line NestedBlockDepth */
                         withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
