--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -27,8 +27,8 @@ pipeline {
                 withCredentials([string(credentialsId: 'AWS_Access', variable: 'AWS_ACCESS_KEY_ID'),
                     string(credentialsId: 'AWS_Access', variable: 'AWS_SECRET_ACCESS_KEY')
                 ]) {
-                    sh 'terraform init'
-                    sh 'terraform apply --auto-approve'
+                    sh 'cd java-maven-sonar-argocd-helm-k8s/terraform /terraform init'
+                    sh 'cd java-maven-sonar-argocd-helm-k8s/terraform /terraform apply --auto-approve'
                 }
             }
 
