--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,112 +2,116 @@
 /* groovylint-disable-next-line CompileStatic */
 /* groovylint-disable-next-line CompileStatic, NglParseError */
 pipeline {
-    agent {
-        docker {
-            image 'abhishekf5/maven-abhishek-docker-agent:v1'
+  agent {
+    docker {
+      image 'abhishekf5/maven-abhishek-docker-agent:v1'
+      /* groovylint-disable-next-line LineLength */
+      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
+    }
+  }
+
+  environment {
+    AWS_DEFAULT_REGION = 'us-east-1'
+  }
+
+  stages {
+    stage('Checkout') {
+      steps {
+        sh 'echo passed'
+        git branch: 'main', url: 'https://github.com/EziamaUgonna/kubernetes_deployment_project.git'
+      }
+    }
+
+    stage('Create an EKS Cluster') {
+      steps {
+        withCredentials([string(credentialsId: 'AWS_Access', variable: 'AWS_ACCESS_KEY_ID'),
+          /* groovylint-disable-next-line DuplicateStringLiteral */
+          string(credentialsId: 'AWS_Access', variable: 'AWS_SECRET_ACCESS_KEY')
+        ]) {
+          sh 'cd java-maven-sonar-argocd-helm-k8s/terraform /terraform init'
+          sh 'cd java-maven-sonar-argocd-helm-k8s/terraform /terraform apply --auto-approve'
+        }
+      }
+    }
+
+    stage('Build and Test') {
+      steps {
+        sh 'ls -ltr'
+        // build the project and create a JAR file
+        sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
+      }
+    }
+
+    stage('Static Code Analysis') {
+      /* groovylint-disable-next-line GStringExpressionWithinString */
+      environment {
+        SONAR_URL = 'http://http://ec2-44-201-221-64.compute-1.amazonaws.com:9000'
+      }
+
+      steps {
+        /* groovylint-disable-next-line NestedBlockDepth */
+        withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
+          /* groovylint-disable-next-line LineLength */
+          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+        }
+      }
+    }
+
+    stage('Build and Push Docker Image') {
+      environment {
+        DOCKER_IMAGE = "elvindavin4u/ultimate-cicd:${BUILD_NUMBER}"
+        // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
+        REGISTRY_CREDENTIALS = credentials('docker-cred')
+      }
+
+      steps {
+        script {
+          /* groovylint-disable-next-line NestedBlockDepth */
+          environment {
+            /* groovylint-disable-next-line DuplicateStringLiteral */
+            AWS_DEFAULT_REGION = 'us-east-1'
             /* groovylint-disable-next-line LineLength */
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-        }
-    }
-
-    environment {
-        AWS_DEFAULT_REGION = 'us-east-1'
-    }
-
-    stages {
-        stage('Checkout') {
-            steps {
-                sh 'echo passed'
-                git branch: 'main', url: 'https://github.com/EziamaUgonna/kubernetes_deployment_project.git'
+            /* groovylint-disable-next-line GStringExpressionWithinString, }           GStringExpressionWithinString */
+            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+            /* groovylint-disable-next-line NoDef, VariableTypeRequired */
+            def dockerImage = docker.image("${DOCKER_IMAGE}")
+            /* groovylint-disable-next-line DuplicateStringLiteral, NestedBlockDepth */
+            docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
+              dockerImage.push()
             }
+          }
         }
+      }
 
-        stage('Create an EKS Cluster') {
-            steps {
-                withCredentials([string(credentialsId: 'AWS_Access', variable: 'AWS_ACCESS_KEY_ID'),
-                /* groovylint-disable-next-line DuplicateStringLiteral */
-                string(credentialsId: 'AWS_Access', variable: 'AWS_SECRET_ACCESS_KEY')
-                                ]) {
-                    sh 'cd java-maven-sonar-argocd-helm-k8s/terraform /terraform init'
-                    sh 'cd java-maven-sonar-argocd-helm-k8s/terraform /terraform apply --auto-approve'
-                }
-            }
+      stage('Update Deployment File') {
+        /* groovylint-disable-next-line NestedBlockDepth */
+        environment {
+          GIT_REPO_NAME = 'kubernetes_deployment_project'
+          GIT_USER_NAME = 'EziamaUgonna'
         }
-
-        stage('Build and Test') {
-            steps {
-                sh 'ls -ltr'
-                // build the project and create a JAR file
-                sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
-            }
-        }
-
-        stage('Static Code Analysis') {
+        /* groovylint-disable-next-line NestedBlockDepth */
+        steps {
+          /* groovylint-disable-next-line NestedBlockDepth */
+          withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
             /* groovylint-disable-next-line GStringExpressionWithinString */
-            environment {
-                SONAR_URL = 'http://http://ec2-44-201-221-64.compute-1.amazonaws.com:9000'
+            sh ''
+            '
+            git config user.email "elvindavin@gmail.com"
+            git config user.name "EziamaUgonna"
+            BUILD_NUMBER = $ {
+              BUILD_NUMBER
             }
-
-            steps {
-                /* groovylint-disable-next-line NestedBlockDepth */
-                withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-                    /* groovylint-disable-next-line LineLength */
-                    sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
-                }
-            }
+            /* groovylint-disable-next-line LineLength */
+            sed - i "s/replaceImageTag/${BUILD_NUMBER}/g"
+            java - maven - sonar - argocd - helm - k8s / spring - boot - app - manifests / deployment.yml
+            git add java - maven - sonar - argocd - helm - k8s / spring - boot - app - manifests / deployment.yml
+            git commit - m "Update deployment image to version ${BUILD_NUMBER}"
+            git push https: //${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+              ''
+            '
+          }
         }
-
-        stage('Build and Push Docker Image') {
-            environment {
-                DOCKER_IMAGE = "elvindavin4u/ultimate-cicd:${BUILD_NUMBER}"
-                // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
-                REGISTRY_CREDENTIALS = credentials('docker-cred')
-            }
-
-            steps {
-                script {
-                    /* groovylint-disable-next-line NestedBlockDepth */
-                    environment {
-                        /* groovylint-disable-next-line DuplicateStringLiteral */
-                        AWS_DEFAULT_REGION = 'us-east-1'
-                        /* groovylint-disable-next-line LineLength */
-                        /* groovylint-disable-next-line GStringExpressionWithinString, }           GStringExpressionWithinString */
-                        sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
-                        /* groovylint-disable-next-line NoDef, VariableTypeRequired */
-                        def dockerImage = docker.image("${DOCKER_IMAGE}")
-                        /* groovylint-disable-next-line DuplicateStringLiteral, NestedBlockDepth */
-                        docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-                            dockerImage.push()
-                        }
-                    }
-                }
-            }
-
-            stage('Update Deployment File') {
-                /* groovylint-disable-next-line NestedBlockDepth */
-                environment {
-                    GIT_REPO_NAME = 'kubernetes_deployment_project'
-                    GIT_USER_NAME = 'EziamaUgonna'
-                }
-                /* groovylint-disable-next-line NestedBlockDepth */
-                steps {
-                    /* groovylint-disable-next-line NestedBlockDepth */
-                    withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                        /* groovylint-disable-next-line GStringExpressionWithinString */
-                        sh '''
-                        git config user.email "elvindavin@gmail.com"
-                        git config user.name "EziamaUgonna"
-                        BUILD_NUMBER = $ {BUILD_NUMBER}
-                        /* groovylint-disable-next-line LineLength */
-                        sed - i "s/replaceImageTag/${BUILD_NUMBER}/g"
-                        java - maven - sonar - argocd - helm - k8s / spring - boot - app - manifests / deployment.yml
-                        git add java - maven - sonar - argocd - helm - k8s / spring - boot - app - manifests / deployment.yml
-                        git commit - m "Update deployment image to version ${BUILD_NUMBER}"
-                        git push https: //${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                        '''
-                    }
-                }
-            }
-        }
+      }
     }
+  }
 }
