--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -65,48 +65,32 @@ pipeline {
 
                 steps {
                     script {
-                /* groovylint-disable-next-line NestedBlockDepth */
-                        environment {
-                    /* groovylint-disable-next-line DuplicateStringLiteral */
-                            AWS_DEFAULT_REGION = 'us-east-1'
-                    /* groovylint-disable-next-line LineLength */
-                    /* groovylint-disable-next-line GStringExpressionWithinString, }           GStringExpressionWithinString */
                             sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
-                    /* groovylint-disable-next-line NoDef, VariableTypeRequired */
-                            def dockerImage = docker.image("${DOCKER_IMAGE}")
-                    /* groovylint-disable-next-line DuplicateStringLiteral, NestedBlockDepth */
+
                             docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
                                 dockerImage.push()
-                            }
                     }
                 }
             }
         }
 
         stage('Update Deployment File') {
-        /* groovylint-disable-next-line NestedBlockDepth */
-                environment {
-                    GIT_REPO_NAME = 'kubernetes_deployment_project'
-                    GIT_USER_NAME = 'EziamaUgonna'
-                }
-        /* groovylint-disable-next-line NestedBlockDepth */
-                steps {
-          /* groovylint-disable-next-line NestedBlockDepth */
-                    withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-            /* groovylint-disable-next-line GStringExpressionWithinString */
-                        sh '''
-            git config user.email "elvindavin@gmail.com"
-            git config user.name "EziamaUgonna"
-            BUILD_NUMBER = $ {
-              BUILD_NUMBER
+            environment {
+                GIT_REPO_NAME = 'kubernetes_deployment_project'
+                GIT_USER_NAME = 'EziamaUgonna'
             }
-            /* groovylint-disable-next-line LineLength */
-            sed - i "s/replaceImageTag/${BUILD_NUMBER}/g"
-            java - maven - sonar - argocd - helm - k8s / spring - boot - app - manifests / deployment.yml
-            git add java - maven - sonar - argocd - helm - k8s / spring - boot - app - manifests / deployment.yml
-            git commit - m "Update deployment image to version ${BUILD_NUMBER}"
-            git push https: //${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-            '''
+
+                steps {
+                    withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                        sh '''
+                            git config user.email "elvindavin@gmail.com"
+                            git config user.name "EziamaUgonna"
+                            BUILD_NUMBER = $ {BUILD_NUMBER}
+                            sed - i "s/replaceImageTag/${BUILD_NUMBER}/g" java - maven - sonar - argocd - helm - k8s / spring - boot - app - manifests / deployment.yml
+                            git add java - maven - sonar - argocd - helm - k8s / spring - boot - app - manifests / deployment.yml
+                            git commit - m "Update deployment image to version ${BUILD_NUMBER}"
+                            git push https: //${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                            '''
                 }
             }
     }   }
