--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,16 +1,14 @@
-/* groovylint-disable GStringExpressionWithinString */
-/* groovylint-disable-next-line CompileStatic */
-/* groovylint-disable-next-line CompileStatic, NglParseError */
 pipeline {
     agent {
         docker {
             image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      /* groovylint-disable-next-line LineLength */
             args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
         }
     }
 
     environment {
+        AWS_ACCESS_KEY_ID = credentials('AWS_ACCESS_KEY_ID')
+        AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
         AWS_DEFAULT_REGION = 'us-east-1'
     }
 
@@ -24,13 +22,11 @@ pipeline {
 
         stage('Create an EKS Cluster') {
             steps {
-                withCredentials([string(credentialsId: 'AWS_Access', variable: 'AWS_ACCESS_KEY_ID'),
-          /* groovylint-disable-next-line DuplicateStringLiteral */
-          string(credentialsId: 'AWS_Access', variable: 'AWS_SECRET_ACCESS_KEY')
-        ]) {
-                    sh 'cd java-maven-sonar-argocd-helm-k8s/terraform /terraform init'
-                    sh 'cd java-maven-sonar-argocd-helm-k8s/terraform /terraform apply --auto-approve'
-        }
+                script {
+                    sh 'cd java-maven-sonar-argocd-helm-k8s/terraform '
+                    sh 'terraform init'
+                    sh 'terraform apply -auto-approve'
+                }
             }
         }
 
@@ -43,32 +39,30 @@ pipeline {
         }
 
         stage('Static Code Analysis') {
-      /* groovylint-disable-next-line GStringExpressionWithinString */
             environment {
                 SONAR_URL = 'http://http://ec2-44-201-221-64.compute-1.amazonaws.com:9000'
             }
 
             steps {
-        /* groovylint-disable-next-line NestedBlockDepth */
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          /* groovylint-disable-next-line LineLength */
                     sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
                 }
             }
         }
+
         stage('Build and Push Docker Image') {
-                    environment {
-                    DOCKER_IMAGE = "elvindavin4u/ultimate-cicd:${BUILD_NUMBER}"
-                    // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
-                    REGISTRY_CREDENTIALS = credentials('docker-cred')
-                }
+            environment {
+                DOCKER_IMAGE = "elvindavin4u/ultimate-cicd:${BUILD_NUMBER}"
+                // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
+                REGISTRY_CREDENTIALS = credentials('docker-cred')
+            }
 
-                steps {
-                    script {
-                            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+            steps {
+                script {
+                    sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
 
-                            docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-                                dockerImage.push()
+                    docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
+                        dockerImage.push()
                     }
                 }
             }
@@ -80,18 +74,19 @@ pipeline {
                 GIT_USER_NAME = 'EziamaUgonna'
             }
 
-                steps {
-                    withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                        sh '''
-                            git config user.email "elvindavin@gmail.com"
-                            git config user.name "EziamaUgonna"
-                            BUILD_NUMBER = $ {BUILD_NUMBER}
-                            sed - i "s/replaceImageTag/${BUILD_NUMBER}/g" java - maven - sonar - argocd - helm - k8s / spring - boot - app - manifests / deployment.yml
-                            git add java - maven - sonar - argocd - helm - k8s / spring - boot - app - manifests / deployment.yml
-                            git commit - m "Update deployment image to version ${BUILD_NUMBER}"
-                            git push https: //${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                            '''
-                }
+            steps {
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                    sh '''
+                        git config user.email "elvindavin@gmail.com"
+                        git config user.name "EziamaUgonna"
+                        BUILD_NUMBER=$ {BUILD_NUMBER}
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                        git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                        git push https://${GITHUB_TOKEN"}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                        '''
+                    }
+               }
             }
-    }   }
-}
+       }
+    }
