--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -38,12 +38,15 @@ pipeline {
         }
 
         stage('Build and Push Docker Image') {
+            environment {
+                DOCKER_IMAGE = "abhishekf5/ultimate-cicd:${BUILD_NUMBER}"
+                REGISTRY_CREDENTIALS = credentials('docker-cred')
+            }
             steps {
-                withCredentials([usernamePassword(credentialsId: 'docker-cred', passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]) {
-                    dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') 
-                    sh 'docker build -t ${DOCKER_IMAGE} .'
+                script {
+                    sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
                     def dockerImage = docker.image("${DOCKER_IMAGE}")
-                    docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                    docker.withRegistry(url: 'https://index.docker.io/v1/', credentialsId: 'docker-cred') {
                         dockerImage.push()
                     }
                 }
